--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>J2eeDemoWebApp</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <finalName>J2eeDemoWebApp</finalName>
+          <attach>false</attach>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
