--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
+        <artifactId>maven-clean-plugin</artifactId>
         <version>3.0.1</version>
         <configuration>
           <finalName>J2eeDemoWebApp</finalName>
