--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.vagrant</groupId>
   <artifactId>J2eeDemoWebApp</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <name>J2eeDemoWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -22,7 +22,7 @@
         <artifactId>maven-clean-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <finalName>J2eeDemoWebApp</finalName>
+          <finalName>J2eeDemoWebApp-2.0</finalName>
           <attach>false</attach>
         </configuration>
       </plugin>
